head.html: Uncommented use of custom.css
nav.html: Added copyright line

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -8,4 +8,5 @@
   <a class="color-link nav-link" href="{{ .Site.RSSLink }}" target="_blank" rel="noopener" type="application/rss+xml">RSS</a>
 </div>
 {{ partial "footer.html" . }}
+<p class="copyright">{{ .Site.Copyright | safeHTML }}</p>
 </nav>
